// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Login application > should login with valid credentials 1`] = `
Object {
  "awaited": "value",
}
`;

exports[`My Login application > should login with valid credentials 2`] = `
Object {
  "a": "a",
}
`;

exports[`My Login application > should login with valid credentials 3`] = `
Object {
  "a2": "a",
}
`;
